# ROS_voting

./: README.md
voting/: CMakeLists.txt  package.xml
voting/src/: counter.cpp  input.cpp
